Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-67027

Windows: examples\opengl\qopenglwindow\qopenglwindow example does not work in full screen mode

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.11.0
    • 5.9, 5.11.0 Beta 1
    • GUI: OpenGL
    • None
    • Windows 10, Desktop GL or ANGLE, Intel(R) HD Graphics 630
    • a060ee2802c72d8ce22f42635d1740bf2f84bed7

      When modifying the code to use window.showFullScreen(), the triangle and text are not drawn and warnings are printed:

      QOpenGLWindow::beginPaint: Failed to make context current
      QPainter::begin(): QOpenGLPaintDevice's context needs to be current
      QPainter::begin(): Returned false
      QPainter::setWorldTransform: Painter not active
      QPainter::setWorldTransform: Painter not active
      QPainter::fillPath: Painter not active
      QPainter::setWorldTransform: Painter not active
      ....
      

      This might a manifestation of some issue that needs to be documented?

        1. qtbug67027_repro.diff
          2 kB
          Friedemann Kleint
        For Gerrit Dashboard: QTBUG-67027
        # Subject Branch Project Status CR V

            lagocs Laszlo Agocs
            kleint Friedemann Kleint
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes